--- a/09/Asg 9.1 Formatting Print Statements .ipynb
+++ b/09/Asg 9.1 Formatting Print Statements .ipynb
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "id": "47e05d1a",
    "metadata": {},
    "outputs": [
@@ -362,7 +362,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "John Smith your gpa is 3.817. You have Chemistry block 1 with Mr. Harder. Jane Doe your gpa is 3.982. You have Calculus block 3 with Mrs. Vraney. Sally Jones your gpa is 3.62. You have Chemistry block 2 with Mr. Coffey. Ed Baker your gpa is 2.98. You have Spanish block 4 with Senora Lentz. \n"
+      "John Smith your gpa is 3.817. You have Chemistry block 1 with Mr. Harder. \n",
+      "Jane Doe your gpa is 3.982. You have Calculus block 3 with Mrs. Vraney. \n",
+      "Sally Jones your gpa is 3.62. You have Chemistry block 2 with Mr. Coffey. \n",
+      "Ed Baker your gpa is 2.98. You have Spanish block 4 with Senora Lentz. \n",
+      "\n"
      ]
     }
    ],
@@ -388,10 +392,10 @@
     "teacher_3 = \"Mr. Coffey\"\n",
     "teacher_4 = \"Senora Lentz\"\n",
     "\n",
-    "print(f\"{student_1} your gpa is {gpa_1}. You have {course_1} block {block_1} with {teacher_1}. \"\n",
-    "     f\"{student_2} your gpa is {gpa_2}. You have {course_2} block {block_2} with {teacher_2}. \"\n",
-    "     f\"{student_3} your gpa is {gpa_3}. You have {course_1} block {block_3} with {teacher_3}. \"\n",
-    "     f\"{student_4} your gpa is {gpa_4}. You have {course_4} block {block_4} with {teacher_4}. \")"
+    "print(f\"{student_1} your gpa is {gpa_1}. You have {course_1} block {block_1} with {teacher_1}. \\n\"\n",
+    "     f\"{student_2} your gpa is {gpa_2}. You have {course_2} block {block_2} with {teacher_2}. \\n\"\n",
+    "     f\"{student_3} your gpa is {gpa_3}. You have {course_1} block {block_3} with {teacher_3}. \\n\"\n",
+    "     f\"{student_4} your gpa is {gpa_4}. You have {course_4} block {block_4} with {teacher_4}. \\n\")"
    ]
   },
   {
