--- a/017/17.2 assignment.ipynb
+++ b/017/17.2 assignment.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "882ebc1d",
    "metadata": {},
    "outputs": [
@@ -60,12 +60,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please enter your name: Good Person\n",
-      "Please enter the department you work in: Education\n",
-      "Please enter your salary: 55000\n",
-      "Please enter your period of service: 8\n",
-      "Please enter your performance rating:Good\n",
-      "Thank you Good Person for your 8 years of service in the Education department. Your performance rating was Good. You will be recieving a 10% bonus.\n"
+      "Please enter your name: hi\n",
+      "Please enter the department you work in: health\n",
+      "Please enter your salary: 57\n",
+      "Please enter your period of service: 5\n",
+      "Please enter your performance rating:good\n",
+      "Thank you hi for your 5 years of service in the health department. Your performance rating was good. You will be recieving a 6% bonus.\n"
      ]
     }
    ],
