--- a/017/Asg 17.4 Decision Structures (Coding) .ipynb
+++ b/017/Asg 17.4 Decision Structures (Coding) .ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b718ea01",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This is an example snippet!\n",
+    "# To create your own, add a new snippet block to the\n",
+    "# snippets.json file in your jupyter nbextensions directory:\n",
+    "# /nbextensions/snippets/snippets.json\n",
+    "import this"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "aef02828",
    "metadata": {},
@@ -273,7 +287,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.5"
   },
   "varInspector": {
    "cols": {
