--- a/Pandas/Asg 28.3 Working with Pandas DataFrames -- The Essentials Part Three (Coding) (1).ipynb
+++ b/Pandas/Asg 28.3 Working with Pandas DataFrames -- The Essentials Part Three (Coding) (1).ipynb
@@ -145,6 +145,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "df = pd.DataFrame(np.array([[4,6,9], [5,1,3]]))\n",
+    "print(df.shape)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
